// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test case files parses Sample.java (java) 1`] = `
{
  "comments": [
    "// import from another package",
    "// import from our own package",
    "/**
   * Sample is a class
   */",
    "// this is a comment",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "Sample",
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "get_annual_income_deduction",
      "type": "methodDeclarator",
    },
    {
      "isLibraryName": false,
      "name": "a",
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "employees",
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "a",
      "type": "fqnOrRefTypePartCommon",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "type": "fqnOrRefTypePartCommon",
    },
    {
      "isLibraryName": false,
      "name": "paye_tax_bracket",
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "get_payslip_for_paye",
      "type": "methodDeclarator",
    },
    {
      "isLibraryName": false,
      "name": "MyEnum",
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_1",
      "type": "enumConstant",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_2",
      "type": "enumConstant",
    },
    {
      "isLibraryName": false,
      "name": "MyIFace",
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "myInterfaceProperty",
      "type": "variableDeclaratorId",
    },
  ],
  "imports": {
    "named": {
      "ArrayList": {
        "isLibraryFile": true,
        "originalName": "ArrayList",
        "source": "java.util",
      },
      "List": {
        "isLibraryFile": true,
        "originalName": "List",
        "source": "java.util",
      },
      "SmartCardReader": {
        "isLibraryFile": false,
        "originalName": "SmartCardReader",
        "source": "nz.school.app.cordovaSmartCardPlugin",
      },
      "Whatever": {
        "isLibraryFile": false,
        "originalName": "Whatever",
        "source": "parsers.languages",
      },
    },
    "wildcard": [
      {
        "isLibraryFile": true,
        "source": "java.beans",
      },
      {
        "isLibraryFile": false,
        "source": "nz.school.app.cordovaGeoLocationPlugin",
      },
      {
        "isLibraryFile": false,
        "source": "parsers.languages",
      },
    ],
  },
}
`;

exports[`test case files parses complex.py (python) 1`] = `
{
  "comments": [
    "
This is a block comment in the middle of nowhere

it has a fake # inline comment within the block

",
    "block comment above func - this is not valid",
    "block comment within func",
    "# comment on the same line as the block end",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "identifier1",
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "identifier2",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "identifier3",
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "tripleQuotedString",
      "type": "VariableDeclarator.ownId",
    },
  ],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.js (javascript) 1`] = `
{
  "comments": [
    " eslint-disable ",
    " @ts-nocheck -- this is a sample file, not part of the sourcecode",
    "*
 * comments yay
 * @param {number} a
 * @param {number} b
 ",
    " an inline comment",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "a",
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "add",
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "x",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "z",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "myCustomAttribute",
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "SomeClass",
      "type": "ClassDeclaration.ownId",
    },
  ],
  "imports": {
    "named": {
      "defaultImport": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile.js",
      },
      "defaultImport2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "json": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./foo.json",
      },
      "named1": {
        "isLibraryFile": false,
        "originalName": "named1",
        "source": "./someFile",
      },
      "named2": {
        "isLibraryFile": false,
        "originalName": "named2",
        "source": "./someFile",
      },
      "named3": {
        "isLibraryFile": false,
        "originalName": "named3",
        "source": "./someFile.ts",
      },
      "named5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamed4": {
        "isLibraryFile": false,
        "originalName": "named4",
        "source": "./someFile.ts",
      },
      "renamed5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamedDefault": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "renamedDefault2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
    },
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.py (python) 1`] = `
{
  "comments": [
    "
Hiii
",
    "
    does nothing
    ",
    undefined,
    "# inline commenttt",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "x",
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "subtract",
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "a",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "OOP",
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "doSomething",
      "type": "MemberExpression.property",
    },
  ],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.ts (javascript) 1`] = `
{
  "comments": [
    " eslint-disable ",
    " @ts-nocheck -- this is a sample file, not part of the sourcecode",
    " extra: TS only",
    "* a comment  ",
    " another comment",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "x",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "z",
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "myCustomAttribute",
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "SomeClass",
      "type": "ClassDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyIFace",
      "type": "TSInterfaceDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyType",
      "type": "TSTypeAliasDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_1",
      "type": "TSEnumMember.ownId",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_2",
      "type": "TSEnumMember.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyEnum",
      "type": "TSEnumDeclaration.ownId",
    },
  ],
  "imports": {
    "named": {
      "Type1": {
        "isLibraryFile": false,
        "originalName": "Type1",
        "source": "./someFile",
      },
      "Type2": {
        "isLibraryFile": false,
        "originalName": "Type2",
        "source": "./someFile",
      },
      "Type3": {
        "isLibraryFile": false,
        "originalName": "Type3",
        "source": "./someFile",
      },
      "defaultImport": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile.js",
      },
      "defaultImport2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "defaultWithType": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "defaultWithType2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "json": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./foo.json",
      },
      "named1": {
        "isLibraryFile": false,
        "originalName": "named1",
        "source": "./someFile",
      },
      "named2": {
        "isLibraryFile": false,
        "originalName": "named2",
        "source": "./someFile",
      },
      "named3": {
        "isLibraryFile": false,
        "originalName": "named3",
        "source": "./someFile.ts",
      },
      "named5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "named6": {
        "isLibraryFile": false,
        "originalName": "named6",
        "source": "./someFile",
      },
      "renamed4": {
        "isLibraryFile": false,
        "originalName": "named4",
        "source": "./someFile.ts",
      },
      "renamed5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamedDefault": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "renamedDefault2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
    },
    "wildcard": [],
  },
}
`;
